--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p><strong>Game Details:</strong> Reloads the entire page, returning you to the Welcome Screen and the About Us page.</p>
                 <h4>Our Mission:</h4>
                 <p><strong>Word Voyager</strong> was designed to provide students, young adults, and even elders an overall knowledge of English terminology, focusing specifically on tricky words and complex concepts often challenging for Bengali speakers. We aim to move beyond simple translation to encourage a deep, analytical understanding of the English language.</p>
-                <h4>The Data-Driven Methodology:</h4>
+                <h4>The Data-Driven Methodology:</h5>
                 <p>The core strength of this game is its immense, hand-prepared dataset. The process was a time-intensive labor of logic and filtering. A huge raw dataset was collected and initially split based on word length.Over <strong>350,000</strong> Bengali meanings were synthesized in real-time, providing the contextual bridge necessary for effective learning.The data was then re-split and rigorously filtered based on the hardness of the words.Finally, the vocabulary was collected and organized into 10 distinct difficulty levels (Levels 1-10).This detailed process ensures that as your score increases, the problems will progressively harden, becoming more difficult, interesting, and thought-provoking than the last a true test of critical thinking over simple recall.</p>
                 <h4>The Word Data:</h4>
                 <p>These Datas show the makeup of 350,000+ word vocabulary based on how long each word is (its character length).</p>
@@ -59,7 +59,7 @@
                 <p>The percentages of the elements(colours) of pie chart are shown here.</p>
                 <img class="image" src="src_imgs/v_3.png">
                 <h5>Post-Processing Data Analysis, Score vs. Size:---</h5>
-                <p>The "Scoore vs Size" graph shows the final, processed distribution of your vocabulary, where the X-axis (Scoore) represents the hardness level (or complexity) assigned to a word, and the Y-axis (Size) represents the number of words at that specific hardness level.</p>
+                <p>The "Scoore vs Size" graph shows the final, processed distribution of the vocabulary, where the X-axis (Scoore) represents the hardness level (or complexity) assigned to a word, and the Y-axis (Size) represents the number of words at that specific hardness level.</p>
                 <img class="image" src="src_imgs/v_9.png" >
                 <h5>Analysis of the "Scoore vs Size Bar" Graph:---</h5>
                 <p><strong>Categorized Difficulty:</strong> The separated bars show that all our words are neatly sorted into distinct groups, ensuring that when you jump from one level to the next, the vocabulary truly gets harder—it's never just a blurry mix.</p>
@@ -81,6 +81,9 @@
                 <p>The graph "Number of Entries per Score Range" groups your processed vocabulary into 10-point difficulty brackets (X-axis) and shows the total Number of Entries (Y-axis) in each bracket.</p>
                 <p><strong>The Normal Distribution (Bell Curve):</strong> The data forms a clear, symmetrical bell curve, rising smoothly from the low-score ranges and peaking near the center before declining smoothly toward the high-score ranges. This outcome confirms the statistical soundness of the initial data processing. A bell curve is the ideal distribution for a large educational or testing dataset, as it ensures:</p>
                 <p><strong>Validation of Core Levels:</strong> The curve peaks sharply in the 61-70 score range, with approximately 77,000 entries. The surrounding ranges (51-60 and 71-80) also hold a massive number of words (over 60,000 each). This validates that the core levels of Word Voyager (Levels 4 through 8) are supported by the greatest volume of diverse content. This smooth, rich content flow guarantees maximum engagement and ensures that the player will face unique, progressively hardening vocabulary throughout the main portion of the game.</p>
+                <img class="image" src="src_imgs/10.png">
+                <h5>Work flow:---</h5>
+                <p>This is the vizulation of the workflow of processing the data.</p>
                 <h4>About Developer:</h4>
                 <p><i>This entire game was designed and prepared from zero by <strong>Tiyas Banerjee</strong> (find the work on Github) during <strong>October 2025</strong>, while in <strong>Class 9 at Biruha Sarat Chandra Uchha Vidyalaya</strong>, with the guidance of <strong>Koushik Sir</strong> and <strong>Ayan Ghoshal Sir</strong>.</i></p>
                 <p><i>This project is fully free and user-friendly—no ads, no financial benefit for the developer. We want people to see the work and judge it correctly, based on its merit and contribution. We are deeply committed to open source and will continue to work on small updates to make the Word Voyager journey ever smarter and more effective.</i></p>
